# property-based-testing-the-ugly-parts

./: .gitignore  Makefile  README.md  default.nix
docs/: index.html
docs/reveal.js/css/theme/: owickstrom.css
nix/: pandoc-emphasize-code.json
src/: customizations.tex  slides.md  theme.css
src/examples/: Examples.hs  examples.cabal
