cabal-version:       2.2
name:                examples
version:             0.1.0.0
license:             MPL-2.0
author:              Oskar Wickström
maintainer:          oskar.wickstrom@gmail.com
build-type:          Simple

executable examples
  build-depends:        base >=4 && <5, hedgehog
  hs-source-dirs:       .
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  main-is:              Examples.hs
